<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.codeforafrica.citizenreporterandroid.ui.auth.signup.SignUpActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <RelativeLayout
          android:layout_width="fill_parent"
          android:padding="10dp"
          android:layout_height="fill_parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="Sign Up"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/sign_up_done_button"
            android:layout_width="wrap_content"
            android:text="Done"
            android:background="@drawable/rounded_dark_button"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

      </RelativeLayout>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:textAllCaps="true"
          android:textStyle="bold"
          android:text="Name" />

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First and last"
            android:inputType="text"
            android:maxLines="1" />

      </android.support.design.widget.TextInputLayout>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:textStyle="bold"
          android:paddingTop="15dp"
          android:textAllCaps="true"
          android:text="Email address" />

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/sign_up_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hello@email.com"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

      </android.support.design.widget.TextInputLayout>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:textStyle="bold"
          android:paddingTop="15dp"
          android:textAllCaps="true"
          android:text="Password" />

      <android.support.design.widget.TextInputLayout
          android:id="@+id/sign_up_password_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"/>

      </android.support.design.widget.TextInputLayout>

      <!-- Login progress -->
      <ProgressBar
          android:id="@+id/sign_up_progress"
          android:layout_gravity="center_horizontal"
          style="?android:attr/progressBarStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:visibility="visible" />

    </LinearLayout>
</LinearLayout>