<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.auth.login.LoginActivity"
    >

  <!-- Login progress -->

  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/cfafrica_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/aviLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:indicatorColor="@color/facebook_blue"
        app:indicatorName="BallScaleMultipleIndicator"
        style="@style/AVLoadingIndicatorView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.403"
        app:layout_constraintHorizontal_bias="0.501"
        />


    <Button
        android:id="@+id/email_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/email_sign_in_button"
        android:drawableLeft="@drawable/ic_icons8_message_96"
        android:paddingStart="20dp"
        android:text="@string/join_with_email"
        android:textColor="@color/email_green"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804"
        style="@style/AppIntroButtonStyleCompat"
        />

    <Button
        android:id="@+id/google_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/google_sign_in_button"
        android:drawableLeft="@drawable/ic_ic_google_filled_30"
        android:paddingStart="20dp"
        android:text="@string/signin_google"
        android:textColor="@color/google_red"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/email_login_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/email_login_button"
        app:layout_constraintRight_toRightOf="@+id/email_login_button"
        style="@style/AppIntroButtonStyleCompat"
        />

    <Button
        android:id="@+id/facebook_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/facebook_sign_in_button"
        android:drawableStart="@drawable/ic_ic_facebook_filled_30"
        android:paddingStart="20dp"
        android:text="@string/signin_facebook"
        android:textColor="@color/facebook_blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/google_login_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/google_login_button"
        app:layout_constraintRight_toRightOf="@+id/google_login_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965"
        style="@style/AppIntroButtonStyleCompat"
        />

    <TextView
        android:id="@+id/signin_with_password"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.76"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/already_have_an_account_sign_in"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898"
        />

  </android.support.constraint.ConstraintLayout>
</LinearLayout>
