...
    android:layout_height="match_parent"
    tools:context="org.codeforafrica.citizenreporterandroid.camera.CameraActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    >
  <TextureView
      android:id="@+id/tv_camera"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_alignParentBottom="true"
      android:layout_alignParentStart="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
...
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_flash_btn"
        />
  <ImageView
      android:id="@+id/img_wb_btn"
      android:layout_width="35dp"
      android:layout_height="35dp"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
...
      app:layout_constraintEnd_toStartOf="@+id/img_capture"
      app:layout_constraintHorizontal_bias="0.6"
      app:layout_constraintStart_toEndOf="@+id/img_gallery"
      app:srcCompat="@drawable/ic_white_balance"
      />
  <ImageView
      android:id="@+id/img_effects_btn"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
...
